--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ aioredis==1.3.1
 hiredis==2.0.0
 pytest==6.2.4
 pytest-asyncio==0.15.1
-pytest-cov-2.12.1
+pytest-cov==2.12.1
 autopep8==1.5.7
 coloredlogs==15.0
 msgpack==1.0.2
