--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,6 +118,11 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Start Redis
+      uses: supercharge/redis-github-action@1.2.0
+      with:
+        redis-version: 6
+
     - name: Set up Python ${{ matrix.python }}
       uses: actions/setup-python@v2
       with:
