--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,3 +5,8 @@ services:
     container_name: 'rrpc'
     ports:
       - 6379:6379
+    volumes:
+    - redis_data:/data
+
+volumes:
+  redis_data:
